Added logging, Entity Framework and commit more changes to Git

--- a/MvcMoviePreview1/appsettings.json
+++ b/MvcMoviePreview1/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
@@ -11,5 +11,8 @@
         "Default": "Warning"
       }
     }
+  },
+  "ConnectionStrings": {
+    "MvcMoviePreview1Context": "Server=(localdb)\\mssqllocaldb;Database=MvcMoviePreview1Context-7d90afb4-5bb8-48d6-a017-2ac4b73d3d1e;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
