--- a/MvcMoviePreview1/MvcMoviePreview1.csproj
+++ b/MvcMoviePreview1/MvcMoviePreview1.csproj
@@ -5,11 +5,15 @@
     <MvcRazorCompileOnPublish>true</MvcRazorCompileOnPublish>
     <AssetTargetFallback>$(AssetTargetFallback);portable-net45+win8+wp8+wpa81;</AssetTargetFallback>
     <UserSecretsId>aspnet-MvcMoviePreview1-6E0141F5-5583-485B-9541-29494CFC6DD9</UserSecretsId>
+    <PackageTargetFallback>portable-net45+win8</PackageTargetFallback>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0-preview2-final" />
     <PackageReference Include="Microsoft.AspNetCore.ResponseCompression" Version="2.0.0-preview2-final" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0-preview2-final" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0-preview2-final" />
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="1.1.1-dev-00019" />
   </ItemGroup>
 
   <ItemGroup>
